# pg-setup-rs

./: .dir-locals.el  Cargo.toml  DEV.org  LICENSE  README.md  justfile
examples/: create-and-drop-db.rs
src/: db.rs  db_cmd_strategy.rs  db_sqlx_strategy.rs  db_url.rs  error.rs  lib.rs  shell.rs  table_builder.rs
