[package]
name = "pg-admin"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { version = "0.1.34" }
sqlx = { version = "0.6", features = ["postgres"], default-features = false, optional = true }
url = "2.3.1"
thiserror = "1.0.38"

[dev-dependencies]
# anyhow = "1"
# sqlx = { version = "0.6", features = ["runtime-tokio-rustls"], default-features = false }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = {version ="0.3.16", features = ["fmt", "env-filter"]}

[features]
default = []
# default = ["sqlx"]
# sqlx = ["sqlx"]
