[package]
name = "pg-helper"
version = "0.1.0"
edition = "2021"

categories = ["development-tools"]
exclude = [".dir-locals.el", "DEV.org", "doc/*"]
homepage = "https://github.com/rksm/pg-helper"
keywords = ["postgres", "sqlx"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rksm/pg-helper"
description = "Helper to create and drop postgres DBs. Useful for testing."

[dependencies]
async-trait = "0.1.61"
sqlx = { version = "0.6", features = ["postgres"], default-features = false, optional = true }
thiserror = "1.0.38"
tracing = { version = "0.1.34" }
url = "2.3.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["fmt", "env-filter"] }
# sqlx = { version = "0.6", features = ["runtime-tokio-rustls"], default-features = false }

[features]
default = []
# default = ["sqlx"]
